--- a/node_backend/package.json
+++ b/node_backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "kgcoding-myntra-backend",
+  "name": "node-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
